# morphological-image-processing

./: .gitignore  Dockerfile  DockerfileAutoKernel  DockerfileForSpeedup  README.md  autoKernelProcessing.sh  create_combined_speedups_plots.py  create_graphs.py  docker-compose.yaml  download_files.sh  expand_images.py
parallel_CUDA/: CMakeLists.txt
parallel_CUDA/CUDA/: naive.cu  sharedOpt.cu
parallel_CUDA/include/: MM.cu  MM.cuh  MathematicalMorphology.cpp  MathematicalMorphology.h  Probe.cpp  Probe.h
parallel_CUDA/sequential_CPP/: main.cpp
parallel_CUDA/tool/: CImg.h  Image.cpp  Image.h  utils.cuh
parallel_JAVA/: build.xml
parallel_JAVA/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
parallel_JAVA/src/parallel_java/: BinaryMaskApplier.java  MYUtils.java  MaskApplier.java  MorphOp.java  Morphology.java  MyCSVWriter.java  MyImageTime.java  MyOwnImage.java  Parallel_JAVA.java
results_CUDA/: convert_speedups_to_files_for_graphs.py  evaluate_speedup.py  speedups_cuda_naive_closure.csv  speedups_cuda_naive_dilatation.csv  speedups_cuda_naive_erosion.csv  speedups_cuda_naive_opening.csv  speedups_cuda_optimized_closure.csv  speedups_cuda_optimized_dilatation.csv  speedups_cuda_optimized_erosion.csv  speedups_cuda_optimized_opening.csv  test.py
results_CUDA/TMP/: 08TileWidthSpeedup.csv  16TileWidthSpeedup.csv  24TileWidthSpeedup.csv  32TileWidthSpeedup.csv
results_JAVA/: create_speedups.py  speedups_java_dilation_optimized.csv  speedups_java_erosion_optimized.csv  timings_java_dilation.csv  timings_java_erosion.csv
